# Animal_Navigation

./: .gitignore  .gitmodules  README.md  animal_workspace.code-workspace  dependency.txt  sync.ffs_lock  t::q  temp.txt
PostProcessing/: Audio Threshold Experiment.csv  Datetime_Dataframe.py  Exp_time_mapping.csv  Light Threshold Experiment.csv  bag2csv.py  data_extractor.py  map_evaluation copy-Copy1.py  map_evaluation.ipynb  map_evaluation.py  map_evaluation_multiple.ipynb  record.bash  temp.py
PostProcessing/.ipynb_checkpoints/: map_evaluation-checkpoint.ipynb  map_evaluation_multiple-checkpoint.ipynb
PostProcessing/2020-11-25-18-09-37/: 2020-11-25-18-09-37.txt  _slash_cmd_sig.csv  _slash_gps_common_navsat_slash_odom.csv  _slash_map.csv  _slash_map_metadata.csv  _slash_move_base_slash_goal.csv  _slash_move_base_slash_result.csv  _slash_move_base_slash_status.csv  _slash_spatial_slash_fix.csv  _slash_spatial_slash_imu.csv  _slash_spatial_slash_mag.csv  _slash_spatial_slash_number_of_satellites.csv  _slash_spatial_slash_posture.csv  _slash_spatial_slash_pressure.csv  _slash_spatial_slash_raw_gnss_packet.csv  _slash_spatial_slash_temp.csv  _slash_start_journey.csv  _slash_state.csv  _slash_waypoints.csv
PostProcessing/human_exp_saga/: bag2csv.py  list.txt  map_evaluation_multiple.ipynb  temp.py
PostProcessing/human_exp_saga/results/: audio  light.csv
PostProcessing/scripts/: Reasons.md  exp_with_os_lib.ipynb  temp.ipynb  test.py  testing_kde.py
PostProcessing/scripts/.ipynb_checkpoints/: exp_with_os_lib-checkpoint.ipynb
animal_motion_control/src/: README.md
animal_motion_control/src/follow_waypoints/: CMakeLists.txt  package.xml
animal_motion_control/src/follow_waypoints/saved_path/: pose.csv  pose1.csv  pose2.csv  pose3.csv
animal_motion_control/src/move_animal/: CMakeLists.txt  package.xml
animal_motion_control/src/move_animal/launch/: move_animal_audio_sig.launch  move_animal_led_audio_sig.launch  move_animal_led_sig.launch  move_animal_led_warn_audio_sig.launch  move_animal_sig.launch  move_animal_vel.launch  move_animal_warn_audio_sig.launch  move_animal_waypoint.launch  move_animal_waypoint_sig.launch  move_animal_waypoint_vel.launch  rosbag_record.launch  rviz2_display.launch  rviz_display.launch
animal_motion_control/src/move_animal/rviz/: rviz.rviz
animal_motion_control/src/move_animal/scripts/: audio_control_cmd_sig.py  audio_control_joy.py  audio_subscriber.py  led_control_cmd_sig.py  led_control_joy.py  trajectory_publisher.py  warn_audio_control_cmd_sig.py
animal_motion_control/src/move_animal/src/: move_animal.cpp  move_animal2.cpp  move_animal_human.cpp  signal_to_velocity.cpp
animal_navigation/devel/: .catkin  _setup_util.py
animal_navigation/devel/include/gps_common/: GPSFix.h  GPSStatus.h
animal_navigation/src/gps_umd/gps_common/: CMakeLists.txt  package.xml
animal_navigation/src/gps_umd/gps_common/launch/: final_animal_pose.launch  utm_converter_tf_publisher.launch  utm_translator_node.launch
animal_navigation/src/gps_umd/gps_common/rviz/: rviz.rviz
animal_navigation/src/gps_umd/gps_common/src/: gnss_imu_adder copy.cpp  gnss_imu_adder.cpp  pose_tf_to_msg.cpp  utm_odometry_node.cpp  utm_transform copy.cpp  utm_transform.cpp
animal_navigation/src/robot_setup_tf/: CMakeLists.txt  package.xml
animal_navigation/src/spatial_driver/: .gitignore  .gitlab-ci.yml
animal_navigation/src/spatial_driver/spatial_driver/: CMakeLists.txt  package.xml
animal_navigation/src/spatial_driver/spatial_driver/config/: sample.yaml
animal_navigation/src/spatial_driver/spatial_driver/include/spatial_driver/: spatial.h
animal_navigation/src/spatial_driver/spatial_driver/launch/: dual_spatial.launch  output_anpp.launch  output_anpp_complete.launch  sample.launch
animal_navigation/src/spatial_driver/spatial_driver/src/: spatial.cpp  spatial_node.cpp
animal_navigation_gazebo/: .gitmodules  README.MD
animal_navigation_gazebo/src/animal_description/: CMakeLists.txt  package.xml
animal_navigation_gazebo/src/animal_description/launch/: test.launch  test2.launch
animal_navigation_gazebo/src/animal_description/plugin/: CMakeLists.txt  motion_model copy.cc  motion_model.cc  plannar_mover.cpp
animal_navigation_gazebo/src/animal_description/urdf/: animal_human.urdf.xacro  animal_human_wheel.urdf.xacro  model_push.world
animal_navigation_gazebo/src/animal_description/worlds/: animal_human.world
bag_script/: 2020-10-19-16-06-21-cmd_sig.csv  LEDguidance_convert_bag.sh  bag2csv.py  move_animal_2020-11-02-21-42-50-cmd_sig.csv
convert_dem_occupancygrid/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
convert_dem_occupancygrid/src/: .gitignore.swp
convert_dem_occupancygrid/src/convert_to_dem/: CMakeLists.txt  README.md  setup.py
convert_dem_occupancygrid/src/dem_to_occupancy/: .gitignore  CMakeLists.txt  README.md  package.xml
gridmap/: gridmaps.srctrldb  gridmaps.srctrlprj
gridmap/devel/: .catkin  _setup_util.py  setup.sh
gridmap/devel/include/grid_map_msgs/: GridMap.h  (+9 more)
gridmap2/devel/: .catkin  .rosinstall  local_setup.sh
hector_slam/: .gitignore
light_signal/src/light_signal_msg/: CMakeLists.txt  package.xml
map/: mymap.pgm  mymap.yaml  mymap2.pgm  mymap2.yaml
navigation/devel/: .catkin  local_setup.sh  setup.sh
orientation/devel/: .catkin
orientation/src/my_quaternion_pkg/: CMakeLists.txt  package.xml
tohoku_acv_original/devel/: .catkin  .rosinstall
tohoku_acv_original/src/convert_to_dem/: .gitignore  package.xml
tohoku_acv_original/src/convert_to_dem/config/: csv_to_dem.yaml
tohoku_acv_original/src/convert_to_dem/launch/: convert_to_dem_node.launch  convert_to_dem_node_test.launch
tohoku_acv_original/src/convert_to_dem/nodes/: dem_to_occupancy_client.py  text_to_dem.py
tohoku_acv_original/src/convert_to_dem/rviz/: view.rviz
tohoku_acv_original/src/convert_to_dem/src/convert_to_dem/: csv_to_df.py  df_to_dem.py
utility/bash/: alien_sandy.bashrc  lenevo_sandy.bashrc  up_root.bashrc
utility/scripts/: audio.bash  light.bash  light_audio.bash  light_warn_audio.bash  record.bash  screen.bash
(+265 files in other folders)
