<?xml version="1.0"?>
<package format="2">
  <name>spatial_driver</name>
  <version>1.0.0</version>
  <description>Driver for the Spatial IMU</description>
  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>
  <author>Naoki Mizuno</author>
  <author>Ryunosuke Hamada</author>
  <author>Nick Otero</author>
  <author>Mitchell Wills</author>
  <license>BSD</license>

  <url type="repository">https://gitlab.com/cyber-k9/spatial_driver</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>spatial_sdk_c</depend>
  <depend>diagnostic_updater</depend>
</package>
